--- a/Composants/Pages/Snake.razor
+++ b/Composants/Pages/Snake.razor
@@ -145,7 +145,7 @@
 </div>
 
 @code {
-    private GameState? gameState;
+    private NuitInfo.Rubeus.Modeles.SnakeGame.GameState? gameState;
     private List<SnakeGameEvent> lastEvents = [];
     private ElementReference gameboardRef;
     private ElementReference containerRef;
