--- a/Composants/_Imports.razor
+++ b/Composants/_Imports.razor
@@ -9,5 +9,7 @@
 @using Microsoft.JSInterop
 @using NuitInfo.Rubeus
 @using NuitInfo.Rubeus.Composants
+@using NuitInfo.Rubeus.PcRescue.Models
+@using NuitInfo.Rubeus.PcRescue.Services
 
 @using MudBlazor
