final push inshallah

--- a/Composants/PcRescue/ExtractionPhase.razor
+++ b/Composants/PcRescue/ExtractionPhase.razor
@@ -269,7 +269,7 @@
             ComponentSlot.Ram => "top: 20%; left: 70%;",        // RAM : haut à droite
             ComponentSlot.Storage => "top: 82%; left: 30%;",    // Storage : bas à gauche
             ComponentSlot.Cpu => "top: 45%; left: 40%;",        // CPU : milieu haut
-            ComponentSlot.Psu => "top: 82%; left: 70%;",        // PSU : bas à droite
+            ComponentSlot.PowerSupply => "top: 82%; left: 70%;",        // PowerSupply : bas à droite
             _ => "top: 50%; left: 50%;"
         };
     }
@@ -285,7 +285,7 @@
             ComponentSlot.Ram => "Mémoire RAM",
             ComponentSlot.Storage => "Stockage",
             ComponentSlot.Cpu => "Processeur",
-            ComponentSlot.Psu => "Alimentation",
+            ComponentSlot.PowerSupply => "Alimentation",
             _ => "Composant"
         };
     }
